crates/keron-lang/tests/corpus/errors/check/map_empty_inferred.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: cannot infer type of empty map; add a `Map<K, V>` annotation
  --> 1:9
  |
1 | val m = {}
  |         ^^^
